--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "files.associations": {
-        "initializer_list": "cpp",
-        "bitset": "cpp"
+        "initializer_list": "cpp"
     }
 }
